# django-magiclink

./: .gitignore  AUTHORS  README.md  pyproject.toml  tox.ini
magiclink/: apps.py  backends.py  exceptions.py  forms.py  helpers.py  models.py  services.py  settings.py  urls.py  utils.py  views.py
magiclink/migrations/: 0001_initial.py
magiclink/templates/magiclink/: login.html  login_failed.html  login_sent.html  signup.html
magiclinks/: apps.py  backends.py  forms.py  models.py  services.py  settings.py  urls.py  utils.py  views.py
magiclinks/migrations/: 0001_initial.py
magiclinks/templates/magiclinks/: login.html  login_email.html  login_email.txt  login_failed.html  signup.html
tests/: fixtures.py  models.py  settings.py  test_backend.py  test_helpers.py  test_login.py  test_login_verify.py  test_logout.py  test_models.py  test_services.py  test_settings.py  test_signup.py  test_utils.py  urls.py
