[tool.poetry]
name = "django-magiclinks"
packages = [
    {include = "magiclinks"}
]
version = "2.0"
description = "Passwordless authentication for Django with Magic Links"
authors = ["Alexander Ovchinnikov <alexander@entropia.us>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/lorddaedra/django-magiclink"
homepage = "https://github.com/lorddaedra/django-magiclink"
keywords = ["magic link", "authentication", "passwordless"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=3.2"
timeflake = "^0.4.0"
django-registration = "^3.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
tox = "^3.17.0"
isort = {extras = ["pyproject"], version = "^5.4.2"}
django-stubs = "^1.5.0"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-django = "^4.3.0"
pytest-mock = "^3.2.0"
pytest-freezegun = "^0.4.1"

[tool.isort]
line_length = 160
multi_line_output = 5
known_third_party = "pytest"
known_first_party = "magiclinks"
skip_glob = "__pycache__/*,venv/*,.venv/*,.tox/*,.mypy_cache"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
